Bug 429155 - Data Range Option isn't preserved
Summary: Data Range Option isn't preserved
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-15 15:20 UTC by Richard Llom
Modified: 2020-11-24 12:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Llom 2020-11-15 15:20:15 UTC
When I change the data range for a line chart and save the page. After restarting systemmonitor the option is reset (to automatic).
Comment 1 Richard Llom 2020-11-15 15:26:49 UTC
Slight correction:
for Y Data it is set to automatic, for X-Data it is always set to 0 / 50 (lower/ upper).
Comment 2 Richard Llom 2020-11-15 15:59:51 UTC
Probably related:
When exporting the chart as a desktop widget, the data ranges are also not preserved.
Comment 3 Bug Janitor Service 2020-11-24 08:44:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/101
Comment 4 David Redondo 2020-11-24 12:13:44 UTC
Git commit 744bccf477457e29da1dacda6d75ef05a0f4b15f by David Redondo.
Committed on 24/11/2020 at 12:12.
Pushed by davidre into branch 'master'.

Write entries if face config changes

If we should not sync we correctly disable autosave. This disables writing to
the config and syncing it. However we still want to write to the config even
if the config should not be synced automatically, so when it is externally
synced the values are saved. This is the same method uses for the other config
properties, for example compare with setTitle().
Related: bug 429167, bug 429367

M  +6    -0    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/744bccf477457e29da1dacda6d75ef05a0f4b15f
Comment 5 David Redondo 2020-11-24 12:14:26 UTC
Git commit 984148d39df3da1d726aec9bf8e741ec2c840541 by David Redondo.
Committed on 24/11/2020 at 12:14.
Pushed by davidre into branch 'Plasma/5.20'.

Write entries if face config changes

If we should not sync we correctly disable autosave. This disables writing to
the config and syncing it. However we still want to write to the config even
if the config should not be synced automatically, so when it is externally
synced the values are saved. This is the same method uses for the other config
properties, for example compare with setTitle().
Related: bug 429167, bug 429367


(cherry picked from commit 744bccf477457e29da1dacda6d75ef05a0f4b15f)

M  +6    -0    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/984148d39df3da1d726aec9bf8e741ec2c840541