Save face config when saving

It looks like we never saved the face config since switching to save & discard
model. With this workaround we can make the map save its values.
BUG:429155
BUG:429167